src/objects/OrderApi__Package_Item__c.object
<CustomObject>
    <description>Package Items allow one Item to bundle other Items.</description>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RESERVED</description>
        <inlineHelpText>RESERVED</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>RESERVED</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related schedule item.</description>
        <inlineHelpText>** System Calculated ** Link to related schedule item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sponsor_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Sponsor Package.</description>
        <inlineHelpText>Link to related Sponsor Package.</inlineHelpText>
        <label>Sponsor Package</label>
        <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to the related Ticket Type. Derived, required and restricted to Package Items linked to parent Item that has a relationship with a Ticket Type.</description>
        <inlineHelpText>** System Calculated ** Link to the related Ticket Type. Derived, required and restricted to Package Items linked to parent Item that has a relationship with a Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calculate_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a required Package Item Price has to be calculated.</description>
        <inlineHelpText>Denotes a required Package Item Price has to be calculated.</inlineHelpText>
        <label>Calculate Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Button_Label__c</fullName>
        <defaultValue>$Label.orderapi__package_item_default_add_to_cart_button_label</defaultValue>
        <description>The label to display for the &quot;Add to Cart&quot; button in the shopping cart. Defaults to &quot;Add to Cart&quot;.</description>
        <inlineHelpText>The label to display for the &quot;Add to Cart&quot; button in the shopping cart. Defaults to &quot;Add to Cart&quot;.</inlineHelpText>
        <label>Add To Cart Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Instructions__c</fullName>
        <description>The shopping cart instructions displays above the package item view.</description>
        <inlineHelpText>The shopping cart instructions displays above the package item view.</inlineHelpText>
        <label>Display Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Item__c</fullName>
        <defaultValue>true</defaultValue>
        <description>By checking this field you are choosing the item to be displayed on the shopping cart, checkout, and receipt pages.</description>
        <inlineHelpText>By checking this field you are choosing the item to be displayed on the shopping cart, checkout, and receipt pages.</inlineHelpText>
        <label>Display Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Label__c</fullName>
        <description>The shopping cart label replaces the default &quot;Package Item&quot; label which will render if no other label is provided.</description>
        <inlineHelpText>The shopping cart label replaces the default &quot;Package Item&quot; label which will render if no other label is provided.</inlineHelpText>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The integer value of the order the system will use to render the package item views in the shopping cart.</description>
        <inlineHelpText>The integer value of the order the system will use to render the package item views in the shopping cart.</inlineHelpText>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Foreign_Key_Id__c</fullName>
        <description>System Field, For Coding purposes only. Used to efficiently insert package items and its related child package items in our system.</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field, For Coding purposes only. Used to efficiently insert package items and its related child package items in our system.</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Group_Header__c</fullName>
        <description>Text that will display in the front end as the group label.</description>
        <inlineHelpText>Text that will display in the front end as the group label.</inlineHelpText>
        <label>Group Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Group_Instructions_Text__c</fullName>
        <description>Text that will display below the group label in the front end.</description>
        <inlineHelpText>Text that will display below the group label in the front end.</inlineHelpText>
        <label>Group Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this package item is the Additional Item group.</description>
        <inlineHelpText>When checked, this package item is the Additional Item group.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this item will display in the recommended item component on the parent item&apos;s detail page.</description>
        <inlineHelpText>When checked, this item will display in the recommended item component on the parent item&apos;s detail page.</inlineHelpText>
        <label>Is Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a required Package Item when the Package (Item) is selected in the parent Sales Order Line.</description>
        <inlineHelpText>Denotes a required Package Item when the Package (Item) is selected in the parent Sales Order Line.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Item Class that contains Items that are either required or optional for selection as part of a sale of the Package Item. The requirement for selection of the Item related to the Item Class is controlled by the &quot;Is Optional&quot; field.</description>
        <inlineHelpText>Link to the Item Class that contains Items that are either required or optional for selection as part of a sale of the Package Item. The requirement for selection of the Item related to the Item Class is controlled by the &quot;Is Optional&quot; field.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Package Items (Do Not Display)</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the Item that is included in the Package.</description>
        <inlineHelpText>** Conditionally Required ** Link to the Item that is included in the Package. Required when the Package Item is not linked to a Item Class.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Quantity_Per_Item__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** For Package Item for Item Classes only ** Identifies the maximum quantity of a single Item that can be selected when selecting Items from this Item Class. Defaults 0. The value of 0 is infinite.</description>
        <inlineHelpText>** For Package Item for Item Classes only ** Identifies the maximum quantity of a single Item that can be selected when selecting Items from this Item Class. Defaults 0. The value of 0 is infinite.</inlineHelpText>
        <label>Maximum Quantity Per Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Maximum_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the maximum quantity of Packaged Items that can be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 is infinite.</description>
        <inlineHelpText>Identifies the maximum quantity of Packaged Items that can be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 is infinite.</inlineHelpText>
        <label>Maximum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Minimum_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Identifies the minimum quantity of Packaged Items that must be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 has no minimum.</description>
        <inlineHelpText>Identifies the minimum quantity of Packaged Items that must be selected when selecting this Item or Items from this Item Class. Defaults 0. The value of 0 has no minimum.</inlineHelpText>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number_of_Free_Items__c</fullName>
        <description>Number of items from the group an end user can select and the item&apos;s price will be $0.</description>
        <inlineHelpText>Number of items from the group an end user can select and the item&apos;s price will be $0.</inlineHelpText>
        <label>Number of Free Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Package_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The selected package item here is the group created in the Additional Item tab on the Advanced Settings Builder.</description>
        <inlineHelpText>The selected package item here is the group created in the Additional Item tab on the Advanced Settings Builder.</inlineHelpText>
        <label>Package Item</label>
        <referenceTo>OrderApi__Package_Item__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Package__c</fullName>
        <description>** Required ** The Item that packages the Item linked in the &quot;Packaged Item&quot; field.</description>
        <inlineHelpText>** Required ** The Item that packages the Item linked in the &quot;Packaged Item&quot; field.</inlineHelpText>
        <label>Package (Item)</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Package Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Package Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>